--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,12 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-list class="row">
+    <ion-item col-6 (click)="showDetails(user)" *ngFor="let user of users">
+      <div>
+          <img src="{{user.avatar_url}}">
+          <p ion-text color="light">&lt;{{user.login}}&gt; </p>
+      </div>
+    </ion-item>
+  </ion-list>
 </ion-content>
